src/objects/Center_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Reminder_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times a reminder was sent before the request was approved.</description>
        <label>Approval Reminder Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a request has been approved.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Should automatically populate after saving the record</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_for_display__c</fullName>
        <formula>Approver__r.FirstName + &apos; &apos; +  Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Event_ID__c</fullName>
        <description>Text version of event ID since a lookup to the Event table is not allowed.</description>
        <label>Calendar Event ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Center Support Requests</relationshipLabel>
        <relationshipName>Center_Support_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hippa_Notice__c</fullName>
        <defaultValue>&quot;To protect patient privacy under HIPPA, please do not identify patient names, photos, or information that could be used to identify a person.&quot;</defaultValue>
        <description>To protect patient privacy under HIPPA, please do not identify patient names, photos, or information that could be used to identify a person.</description>
        <label>Hippa_Notice</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Compliance__c</fullName>
        <label>Do you need to contact legal/compliance?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_by_date__c</fullName>
        <label>Need by date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obtained_Center_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will allow the RBD to verify that they have confirmed with the center for the visit.</description>
        <label>Obtained Center Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Reminder_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times a reminder to submit request was sent.</description>
        <label>Submit Reminder Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_Time__c</fullName>
        <description>Date and time a request was submitted for approval.</description>
        <label>Submitted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a request has/has not been submitted for approval (true/false).</description>
        <label>Submitted for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Purpose of Visit</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Departure__c</fullName>
        <label>Travel Departure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Return__c</fullName>
        <label>Travel Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Traveler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Traveler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Support_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Cultural</fullName>
                </value>
                <value>
                    <fullName>Hope RX</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Practice Mastery</fullName>
                </value>
                <value>
                    <fullName>Rainmaker</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>On boarding PEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Center Support Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Center_Information__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Travel_Departure__c</columns>
        <columns>Travel_Return__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Denver</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Need_by_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Center_Information__c</field>
            <operation>equals</operation>
            <value>Denver</value>
        </filters>
        <label>Denver</label>
    </listViews>
    <listViews>
        <fullName>HopeRx_View</fullName>
        <columns>Need_by_date__c</columns>
        <columns>NAME</columns>
        <columns>Approver_for_display__c</columns>
        <columns>Center_Information__c</columns>
        <columns>Traveler__c</columns>
        <columns>Travel_Departure__c</columns>
        <columns>Travel_Return__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Hope RX</value>
        </filters>
        <label>HopeRx View</label>
    </listViews>
    <listViews>
        <fullName>Show_Pending_Approval</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Submitted_for_Approval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Show Pending Requests</label>
    </listViews>
    <listViews>
        <fullName>Standard_View</fullName>
        <columns>NAME</columns>
        <columns>Center_Information__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <label>Standard View</label>
    </listViews>
    <nameField>
        <displayFormat>CSR-{00000}</displayFormat>
        <label>Center Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Center Support Requests</pluralLabel>
    <recordTypes>
        <fullName>CCMS</fullName>
        <active>true</active>
        <description>Request initiated from CCMS</description>
        <label>From CCMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Center</fullName>
        <active>false</active>
        <description>Request initiated from an RBD</description>
        <label>From RBD</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Departure_cannot_be_before_today</fullName>
        <active>true</active>
        <errorConditionFormula>(PRIORVALUE(Travel_Departure__c) != Travel_Departure__c)
&amp;&amp;
(Travel_Departure__c &lt;  TODAY())</errorConditionFormula>
        <errorDisplayField>Travel_Departure__c</errorDisplayField>
        <errorMessage>Date cannot not be before today&apos;s date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_select_a_Meeting_With_option</fullName>
        <active>true</active>
        <errorConditionFormula>Lab__c = false &amp;&amp; Doctor__c = false &amp;&amp; OM__c = false &amp;&amp; PEC__c = false &amp;&amp; ($Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>PEC__c</errorDisplayField>
        <errorMessage>Must select someone with whom to meet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Return_cannot_be_before_departure</fullName>
        <active>true</active>
        <errorConditionFormula>Travel_Return__c &lt; Travel_Departure__c</errorConditionFormula>
        <errorDisplayField>Travel_Return__c</errorDisplayField>
        <errorMessage>Return date cannot be before departure</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Travel_info_is_all_or_nothing</fullName>
        <active>true</active>
        <description>Travel info cannot be partially filled in - all fields must be empty or filled in.</description>
        <errorConditionFormula>NOT(ISBLANK(Travel_Departure__c) &amp;&amp; ISBLANK(Travel_Return__c) &amp;&amp; ISBLANK(Traveler__c)) 
&amp;&amp; 
NOT(NOT(ISBLANK(Travel_Departure__c)) &amp;&amp; NOT(ISBLANK(Travel_Return__c)) &amp;&amp; NOT(ISBLANK(Traveler__c)))</errorConditionFormula>
        <errorMessage>Travel info cannot be partially filled in. If a traveler&apos;s name is entered you need to enter travel dates; if a departure date is entered you need to enter a return date, etc.</errorMessage>
    </validationRules>
</CustomObject>